Completely reworked queue.c to cast external queues to hidden internal ones. Changed qput to set the front pointer if null. Added test1.c to demonstrate modularity. Changed makefile to compile it all.

--- a/queue/Makefile
+++ b/queue/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-Wall -pedantic -std=c11 -I. -g
 
-queueComp: queue.c
-	gcc $(CFLAGS) queue.c -o queueComp
-
 %.o: %.c %.h
 	gcc $(CFLAGS) -c $<
+
+test1: test1.o queue.o
+	gcc $(CFLAGS) test1.o queue.o -o test1
