--- a/queue/Makefile
+++ b/queue/Makefile
@@ -1,5 +1,7 @@
 CFLAGS=-Wall -pedantic -std=c11 -I. -g
 
+all: test1 test3 test4
+
 %.o: %.c %.h
 	gcc $(CFLAGS) -c $<
 
@@ -8,3 +10,6 @@ test1: test1.o queue.o
 
 test3: test3.o queue.o
 	gcc $(CFLAGS) test3.o queue.o -o test3
+
+test4: test4.o queue.o
+	gcc $(CFLAGS) test4.o queue.o -o test4
