Added seach test for hash, edited Makefile, included Roman puns

--- a/queue_hash/Makefile
+++ b/queue_hash/Makefile
@@ -1,7 +1,7 @@
 CFLAGS=-Wall -pedantic -std=c11 -I. -g
 VALGRIND=valgrind --leak-check=full
 
-all: test1 test2 test3 test4 test1hash
+all: test1 test2 test3 test4 test1hash test2hash
 
 %.o:	%.c
 			gcc $(CFLAGS) -c $<
@@ -19,22 +19,28 @@ test4:	test4.o queue.o
 				gcc $(CFLAGS) test4.o queue.o -o test4
 
 test1hash:	test1hash.o hash.o queue.o
-						gcc $(CFLAGS) queue.o test1hash.o hash.o -o test1hash
+				gcc $(CFLAGS) queue.o test1hash.o hash.o -o test1hash
+
+test2hash: test2hash.o hash.o queue.o
+				gcc $(CFLAGS) queue.o test2hash.o hash.o -o test2hash
 
 valgrind1:	test1
-						$(VALGRIND) test1
+				$(VALGRIND) test1
 
 valgrind2: test2
-	$(VALGRIND) test2
+				$(VALGRIND) test2
 
 valgrind3: test3
-	$(VALGRIND) test3
+				$(VALGRIND) test3
 
 valgrind4: test4
-	$(VALGRIND) test4
+				$(VALGRIND) test4
 
 valgrindtest1hash: test1hash
-	$(VALGRIND) test1hash
+				$(VALGRIND) test1hash
+
+valgrindtest2hash: test2hash
+				$(VALGRIND) test2hash
 
 clean:
-	rm -f *.o test1 test2 test3 test4 test1hash
+	rm -f *.o test1 test2 test3 test4 test1hash test2hash
